<resources>
    <string name="app_name">Task Master</string>
    <string name="greet">What\'s up</string>
    <string name="todaysTask">Recent Task</string>
    <string name="Task">Task</string>
    <string name="addTask">ADD TASK</string>
    <string name="Etask">Enter your task</string>
    <string name="tdate">Select Date</string>
    <string name="ttime">Select Time</string>
    <string name="add">ADD</string>
    <string name="completed">Completed</string>
    <string name="update">Update</string>
    <string name="UPDATE">UPDATE</string>
    <string name="delete">Delete</string>
    <string name="update_task">UPDATE TASK</string>
    <string name="time">Time</string>
    <string name="date">Date</string>

</resources>