<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#120E0A"
    android:padding="10dp">

    <TextView
        android:id="@+id/addtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minHeight="48dp"
        android:text="@string/addTask"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edttask"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="@string/Etask"
        android:hint="@string/Etask"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:minHeight="48dp"
        android:background="@drawable/edittext_bg"
        android:drawableLeft="@drawable/baseline_library_books_24"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="20dp">


    <TextView
        android:id="@+id/tdate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginHorizontal="5dp"
        android:paddingVertical="5dp"
        android:background="@drawable/edittext_bg"
        android:minHeight="48dp"
        android:paddingHorizontal="20dp"
        android:text="@string/tdate"
        android:textSize="15sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/ttime"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginHorizontal="5dp"
        android:paddingVertical="5dp"
        android:background="@drawable/edittext_bg"
        android:minHeight="48dp"
        android:paddingHorizontal="20dp"
        android:text="@string/ttime"
        android:textSize="15sp"
        android:textColor="@color/white"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:button="@drawable/custom_checkbox"
        android:checked="true"
        android:paddingHorizontal="7dp"
        android:text="Set Remainder"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/addbtn"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:layout_marginHorizontal="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/add"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginBottom="40dp"/>
</LinearLayout>